<resources>
    <string name="app_name">Municipios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_id">ID</string>
    <string name="dialog_fire_missiles">¿Estas seguro que quieres continuar?</string>
    <string name="menu_create">Crear</string>
    <string name="delete">Eliminar</string>
    <string name="menu_update">Actuzalizar</string>
    <string name="list">Listar</string>
    <string name="exit">Salir</string>
    <string name="title_activity_maps">Map</string>
</resources>
